--- a/.gitignore
+++ b/.gitignore
@@ -58,4 +58,4 @@ Temporary Items
 
 /Wilson_oficial/Wilson_oficial.iOS/bin
 /Wilson_oficial/Wilson_oficial.iOS/obj
-/.vs
+.vs/Apollo Dictionary/v14/.suo
