--- a/Wilson_oficial/Wilson_oficial.Droid/Wilson_oficial.Droid.csproj
+++ b/Wilson_oficial/Wilson_oficial.Droid/Wilson_oficial.Droid.csproj
@@ -153,6 +153,15 @@
   <ItemGroup>
     <None Include="Properties\AndroidManifest.xml" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\Drawable\Past-50.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\Drawable\Category-50.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\Drawable\Search-50.png" />
+  </ItemGroup>
   <Import Project="..\Wilson_oficial\Wilson_oficial.projitems" Label="Shared" Condition="Exists('..\Wilson_oficial\Wilson_oficial.projitems')" />
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <Import Project="..\..\packages\Xamarin.Android.Support.Vector.Drawable.23.3.0\build\Xamarin.Android.Support.Vector.Drawable.targets" Condition="Exists('..\..\packages\Xamarin.Android.Support.Vector.Drawable.23.3.0\build\Xamarin.Android.Support.Vector.Drawable.targets')" />
