--- a/Wilson_oficial/Wilson_oficial.Droid/Properties/AndroidManifest.xml
+++ b/Wilson_oficial/Wilson_oficial.Droid/Properties/AndroidManifest.xml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:installLocation="preferExternal">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:installLocation="preferExternal" android:versionCode="1" android:versionName="1.0">
 	<uses-sdk android:minSdkVersion="15" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-	<application android:label="Wilson_oficial.Droid"></application>
+	<application android:label="Apollo Dictionary" android:icon="@drawable/Apollo_icon"></application>
 </manifest>
